--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.11",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/supabase-js": "^2.33.1",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -19,7 +22,15 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.12",
+    "speakeasy": "^2.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "twilio": "^4.17.0",
+    "typescript": "5.2.2",
+    "viem": "^1.10.8",
+    "wagmi": "^1.4.1"
+  },
+  "devDependencies": {
+    "@types/speakeasy": "^2.0.7"
   }
 }
