--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
@@ -24,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.12",
     "speakeasy": "^2.0.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "twilio": "^4.17.0",
     "typescript": "5.2.2",
