--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "lucide-react": "^0.276.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-qr-code": "^2.0.12",
     "speakeasy": "^2.0.0",
     "tailwind-merge": "^1.14.0",
